SPRING GEMFIRE INTEGRATION CHANGELOG
====================================
http://www.springsource.org/spring-gemfire

Changes in version 1.1.0.M3 (2011-mm-dd)
----------------------------------------

Package org.springframework.data.gemfire.client
* Add missing properties to PoolFactoryBean and pool namespace


Changes in version 1.1.0.M2 (2011-08-29)
----------------------------------------

General
* Introduced support for GemFire Continuous Query (CQ)
* Introduced support for client cache
* Introduced namespace support for region expiration attributes

Package org.springframework.data.gemfire
* Added find methods (based on the query service) inside GemFireTemplate
* Improved detection of local client regions without pools configured

Package org.springframework.data.gemfire.server
* Fixed bug occuring when applying defaults for disk stores
* Delayed CacheServer start up to allow declared regions to properly initialize


Changes in version 1.1.0.M1 (2011-07-20)
----------------------------------------

General
* Changed build system to Gradle
* Added support for GemFire 6.6
* Dropped support for GemFire 6.0 (GemFire 6.5 or higher required)
* Introduced support for CacheServer
* Introduced GemFire implementation for Spring 3.1 cache abstraction
* Upgraded to Spring Framework 3.1 M2

Package org.springframework.data.gemfire
* Introduced cache option for disabling bean factory locator; useful for multi cache definitions, in the same VM
* Added more region methods to GemfireTemplate
* Introduced support for queries with variable parameters in GemfireTemplate
* Improved handling of optimistic exception in a transaction scenario


Changes in version 1.0.1 (2011-04-26)
-------------------------------------
General
* Upgraded to GemFire 6.5.1.4
* Fix networking issue with the sample on some Linux distributions (Ubuntu)
* Loosen type constraints in the schema to allow placeholders
* Added 'statistics' attribute to all write regions
